Add sorting problem.
Smart Phone : https://www.codechef.com/ZCOPRAC/problems/ZCO14003

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,4 @@ add_executable(TWINGFT TWINGFT.cpp)
 add_executable(CHARGES CHARGES.cpp)
 add_executable(NUMCOMP1 NUMCOMP1.cpp)
 add_executable(CHESUB CHESUB.cpp)
+add_executable(ZCO14003 ZCO14003.cpp)
