--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,3 +13,4 @@ add_executable(CHARGES CHARGES.cpp)
 add_executable(NUMCOMP1 NUMCOMP1.cpp)
 add_executable(CHESUB CHESUB.cpp)
 add_executable(ZCO14003 ZCO14003.cpp)
+add_executable(ZCO14001 ZCO14001.cpp)
