--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,3 +14,4 @@ add_executable(NUMCOMP1 NUMCOMP1.cpp)
 add_executable(CHESUB CHESUB.cpp)
 add_executable(ZCO14003 ZCO14003.cpp)
 add_executable(ZCO14001 ZCO14001.cpp)
+add_executable(ZCO15002 ZCO15002.cpp)
