Add implementation problem.
Strong Language : https://www.codechef.com/APRIL21C/problems/SSCRIPT

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ add_executable(ICL16A ICL16A.cpp)
 add_executable(MAXFUN MAXFUN.cpp)
 add_executable(NUMCOMP1 NUMCOMP1.cpp)
 add_executable(SOCKS1 SOCKS1.cpp)
+add_executable(SSCRIPT SSCRIPT.cpp)
 add_executable(TANDJ1 TANDJ1.cpp)
 add_executable(TWINGFT TWINGFT.cpp)
 add_executable(ZCO14001 ZCO14001.cpp)
