Add scc problem.
Chef and Round Run : https://www.codechef.com/problems/CHEFRRUN

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_CXX_STANDARD 17)
 add_executable(BOLT BOLT.cpp)
 add_executable(CHARGES CHARGES.cpp)
 add_executable(CHEFELEC CHEFELEC.cpp)
+add_executable(CHEFRRUN CHEFRRUN.cpp)
 add_executable(CHESUB CHESUB.cpp)
 add_executable(HOOPS HOOPS.cpp)
 add_executable(ICL16A ICL16A.cpp)
