Add dp problem.
Break Up: https://www.codechef.com/ZCOPRAC/problems/ZCO15001

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,4 +19,5 @@ add_executable(TANDJ1 TANDJ1.cpp)
 add_executable(TWINGFT TWINGFT.cpp)
 add_executable(ZCO14001 ZCO14001.cpp)
 add_executable(ZCO14003 ZCO14003.cpp)
+add_executable(ZCO15001 ZCO15001.cpp)
 add_executable(ZCO15002 ZCO15002.cpp)
