--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,3 +21,4 @@ add_executable(ZCO14001 ZCO14001.cpp)
 add_executable(ZCO14003 ZCO14003.cpp)
 add_executable(ZCO15001 ZCO15001.cpp)
 add_executable(ZCO15002 ZCO15002.cpp)
+add_executable(ZCO16001 ZCO16001.cpp)
