Add sorting problem.
Covering: https://www.codechef.com/ZCOPRAC/problems/ZCO15003

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,4 +21,5 @@ add_executable(ZCO14001 ZCO14001.cpp)
 add_executable(ZCO14003 ZCO14003.cpp)
 add_executable(ZCO15001 ZCO15001.cpp)
 add_executable(ZCO15002 ZCO15002.cpp)
+add_executable(ZCO15003 ZCO15003.cpp)
 add_executable(ZCO16001 ZCO16001.cpp)
