Add sorting problem.
Bamboo Art: https://www.codechef.com/ZCOPRAC/problems/ZCO16002

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,3 +23,4 @@ add_executable(ZCO15001 ZCO15001.cpp)
 add_executable(ZCO15002 ZCO15002.cpp)
 add_executable(ZCO15003 ZCO15003.cpp)
 add_executable(ZCO16001 ZCO16001.cpp)
+add_executable(ZCO16002 ZCO16002.cpp)
