--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ add_executable(CHEFRRUN CHEFRRUN.cpp)
 add_executable(CHESUB CHESUB.cpp)
 add_executable(HOOPS HOOPS.cpp)
 add_executable(ICL16A ICL16A.cpp)
+add_executable(INOI1402 INOI1402.cpp)
 add_executable(MAXFUN MAXFUN.cpp)
 add_executable(NUMCOMP1 NUMCOMP1.cpp)
 add_executable(SOCKS1 SOCKS1.cpp)
