Add sparse table + binary search problem.
Sereja and D: https://www.codechef.com/problems/SEAD

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ add_executable(INOI1201 INOI1201.cpp)
 add_executable(MAXFUN MAXFUN.cpp)
 add_executable(MSTICK MSTICK.cpp)
 add_executable(NUMCOMP1 NUMCOMP1.cpp)
+add_executable(SEAD SEAD.cpp)
 add_executable(SOCKS1 SOCKS1.cpp)
 add_executable(SSCRIPT SSCRIPT.cpp)
 add_executable(TANDJ1 TANDJ1.cpp)
