--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ add_executable(SOCKS1 SOCKS1.cpp)
 add_executable(SSCRIPT SSCRIPT.cpp)
 add_executable(TANDJ1 TANDJ1.cpp)
 add_executable(TWINGFT TWINGFT.cpp)
+add_executable(ZCO13002 ZCO13002.cpp)
 add_executable(ZCO14001 ZCO14001.cpp)
 add_executable(ZCO14003 ZCO14003.cpp)
 add_executable(ZCO15001 ZCO15001.cpp)
