Add dp problem.
Longest Palindrome: https://www.codechef.com/IARCSJUD/problems/LONGPALI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ add_executable(ICL16A ICL16A.cpp)
 add_executable(INOI1201 INOI1201.cpp)
 add_executable(INOI1402 INOI1402.cpp)
 add_executable(LEADGAME LEADGAME.cpp)
+add_executable(LONGPALI LONGPALI.cpp)
 add_executable(MAXFUN MAXFUN.cpp)
 add_executable(MSTICK MSTICK.cpp)
 add_executable(NUMCOMP1 NUMCOMP1.cpp)
