--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ add_executable(CHARGES CHARGES.cpp)
 add_executable(CHEFELEC CHEFELEC.cpp)
 add_executable(CHEFRRUN CHEFRRUN.cpp)
 add_executable(CHESUB CHESUB.cpp)
+add_executable(ENDCORR ENDCORR.cpp)
 add_executable(HOOPS HOOPS.cpp)
 add_executable(ICL16A ICL16A.cpp)
 add_executable(INOI1201 INOI1201.cpp)
