--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ add_executable(SEAD SEAD.cpp)
 add_executable(SOCKS1 SOCKS1.cpp)
 add_executable(SSCRIPT SSCRIPT.cpp)
 add_executable(TANDJ1 TANDJ1.cpp)
+add_executable(TILES01 TILES01.cpp)
 add_executable(TWINGFT TWINGFT.cpp)
 add_executable(ZCO13002 ZCO13002.cpp)
 add_executable(ZCO14001 ZCO14001.cpp)
