--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ add_executable(LONGPALI LONGPALI.cpp)
 add_executable(MAXFUN MAXFUN.cpp)
 add_executable(MSTICK MSTICK.cpp)
 add_executable(NUMCOMP1 NUMCOMP1.cpp)
+add_executable(NEXTPERM NEXTPERM.cpp)
 add_executable(SEAD SEAD.cpp)
 add_executable(SOCKS1 SOCKS1.cpp)
 add_executable(SSCRIPT SSCRIPT.cpp)
