Add implementation problem.
Discrepancies in the Voters List: https://www.codechef.com/IARCSJUD/problems/VOTERSDI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ add_executable(SSCRIPT SSCRIPT.cpp)
 add_executable(TANDJ1 TANDJ1.cpp)
 add_executable(TILES01 TILES01.cpp)
 add_executable(TWINGFT TWINGFT.cpp)
+add_executable(VOTERSDI VOTERSDI.cpp)
 add_executable(ZCO13002 ZCO13002.cpp)
 add_executable(ZCO14001 ZCO14001.cpp)
 add_executable(ZCO14003 ZCO14003.cpp)
