Add sorting problem.
Sorting Rows of Numbers: https://www.codechef.com/IARCSJUD/problems/SORTROWS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ add_executable(NUMCOMP1 NUMCOMP1.cpp)
 add_executable(NEXTPERM NEXTPERM.cpp)
 add_executable(SEAD SEAD.cpp)
 add_executable(SOCKS1 SOCKS1.cpp)
+add_executable(SORTROWS SORTROWS.cpp)
 add_executable(SSCRIPT SSCRIPT.cpp)
 add_executable(TANDJ1 TANDJ1.cpp)
 add_executable(TILES01 TILES01.cpp)
