Add brute force problem.
Whats the Rank: https://www.codechef.com/IARCSJUD/problems/IARANK

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ add_executable(CHEFRRUN CHEFRRUN.cpp)
 add_executable(CHESUB CHESUB.cpp)
 add_executable(ENDCORR ENDCORR.cpp)
 add_executable(HOOPS HOOPS.cpp)
+add_executable(IARANK IARANK.cpp)
 add_executable(IAREVERS IAREVERS.cpp)
 add_executable(ICL16A ICL16A.cpp)
 add_executable(INOI1201 INOI1201.cpp)
