--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ add_executable(CHARGES CHARGES.cpp)
 add_executable(CHEFELEC CHEFELEC.cpp)
 add_executable(CHEFRRUN CHEFRRUN.cpp)
 add_executable(CHESUB CHESUB.cpp)
+add_executable(CYCLEPER CYCLEPER.cpp)
 add_executable(DIVSEQ DIVSEQ.cpp)
 add_executable(ENDCORR ENDCORR.cpp)
 add_executable(HOOPS HOOPS.cpp)
