Add recursion problem.
Find the Numbers: https://www.codechef.com/IARCSJUD/problems/FINDNUMS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ add_executable(CHESUB CHESUB.cpp)
 add_executable(CYCLEPER CYCLEPER.cpp)
 add_executable(DIVSEQ DIVSEQ.cpp)
 add_executable(ENDCORR ENDCORR.cpp)
+add_executable(FINDNUMS FINDNUMS.cpp)
 add_executable(GREATESC GREATESC.cpp)
 add_executable(HOOPS HOOPS.cpp)
 add_executable(IARANK IARANK.cpp)
