Add dijkstra problem.
Free ticket: https://www.codechef.com/INOIPRAC/problems/INOI1402

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ add_executable(HOOPS HOOPS.cpp)
 add_executable(IARANK IARANK.cpp)
 add_executable(IAREVERS IAREVERS.cpp)
 add_executable(ICL16A ICL16A.cpp)
+add_executable(INOI1402 INOI1402.cpp)
 add_executable(LEADGAME LEADGAME.cpp)
 add_executable(LONGPALI LONGPALI.cpp)
 add_executable(MAXFUN MAXFUN.cpp)
