--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ add_executable(INOI1201 INOI1201.cpp)
 add_executable(INOI1301 INOI1301.cpp)
 add_executable(INOI1302 INOI1302.cpp)
 add_executable(INOI1402 INOI1402.cpp)
+add_executable(INOI1601 INOI1601.cpp)
 add_executable(LEADGAME LEADGAME.cpp)
 add_executable(LONGPALI LONGPALI.cpp)
 add_executable(MAXFUN MAXFUN.cpp)
