--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ add_executable(IARANK IARANK.cpp)
 add_executable(IAREVERS IAREVERS.cpp)
 add_executable(ICL16A ICL16A.cpp)
 add_executable(INOI1201 INOI1201.cpp)
+add_executable(INOI1202 INOI1202.cpp)
 add_executable(INOI1301 INOI1301.cpp)
 add_executable(INOI1302 INOI1302.cpp)
 add_executable(INOI1402 INOI1402.cpp)
