Add implementation problem.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ add_executable(LEADGAME LEADGAME.cpp)
 add_executable(LONGPALI LONGPALI.cpp)
 add_executable(MAXFUN MAXFUN.cpp)
 add_executable(MSTICK MSTICK.cpp)
+add_executable(N1VALUES N1VALUES.cpp)
 add_executable(NEWBIE05 NEWBIE05.cpp)
 add_executable(NEXTPERM NEXTPERM.cpp)
 add_executable(NUMCOMP1 NUMCOMP1.cpp)
