--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,7 @@ add_executable(TANDJ1 TANDJ1.cpp)
 add_executable(TILES01 TILES01.cpp)
 add_executable(TILINGS TILINGS.cpp)
 add_executable(TWINGFT TWINGFT.cpp)
+add_executable(UWCOI20C UWCOI20C.cpp)
 add_executable(VOTERSDI VOTERSDI.cpp)
 add_executable(WORDLIST WORDLIST.cpp)
 add_executable(ZCO13002 ZCO13002.cpp)
