--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,7 @@ add_executable(SSCRIPT SSCRIPT.cpp)
 add_executable(TANDJ1 TANDJ1.cpp)
 add_executable(TILES01 TILES01.cpp)
 add_executable(TILINGS TILINGS.cpp)
+add_executable(TRAVELLING TRAVELLING.cpp)
 add_executable(TWINGFT TWINGFT.cpp)
 add_executable(UWCOI20C UWCOI20C.cpp)
 add_executable(VOTERSDI VOTERSDI.cpp)
