--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ add_executable(INOI1302 INOI1302.cpp)
 add_executable(INOI1401 INOI1401.cpp)
 add_executable(INOI1402 INOI1402.cpp)
 add_executable(INOI1601 INOI1601.cpp)
+add_executable(INOI2201 INOI2201.cpp)
 add_executable(LEADGAME LEADGAME.cpp)
 add_executable(LONGPALI LONGPALI.cpp)
 add_executable(MAXFUN MAXFUN.cpp)
