Add binary search problem.
Parchment: https://www.codechef.com/ZCOPRAC/problems/ZCO23001?tab=statement

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,3 +58,4 @@ add_executable(ZCO15003 ZCO15003.cpp)
 add_executable(ZCO16001 ZCO16001.cpp)
 add_executable(ZCO16002 ZCO16002.cpp)
 add_executable(ZCO20001 ZCO20001.cpp)
+add_executable(ZCO23001 ZCO23001.cpp)
