Add centroid decomposition problem.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,7 @@ add_executable(N1VALUES N1VALUES.cpp)
 add_executable(NEWBIE05 NEWBIE05.cpp)
 add_executable(NEXTPERM NEXTPERM.cpp)
 add_executable(NUMCOMP1 NUMCOMP1.cpp)
+add_executable(PRIMEDST PRIMEDST.cpp)
 add_executable(SEAD SEAD.cpp)
 add_executable(SOCKS1 SOCKS1.cpp)
 add_executable(SORTROWS SORTROWS.cpp)
